Fix character counter align

--- a/packages/survey-core/src/default-theme/blocks/sd-formbox.scss
+++ b/packages/survey-core/src/default-theme/blocks/sd-formbox.scss
@@ -135,6 +135,7 @@
     font-size: var(--sjs2-typography-font-size-small, 12px);
     font-style: normal;
     font-weight: 400;
+    align-self: center;
     line-height: var(--sjs2-typography-line-height-small, 16px);
 }
 
